--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "node cli.js"
+    "start": "node cli.js",
+    "test": "ava"
   },
   "files": [
     "cli.js",
@@ -31,6 +32,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@ethancord/prettier-config": "^1.0.0",
+    "ava": "^3.15.0",
     "eslint-config-xo-react": "^0.23.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
