--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "slackmojis_downloader",
   "version": "2.0.0",
   "description": "Downloads all emojis from https://slackmojis.com",
-  "main": "app.js",
+  "main": "cli.js",
   "author": "Ethan Fann",
   "license": "MIT",
-  "bin": "cli.js",
   "engines": {
     "node": ">=10"
   },
@@ -13,10 +12,6 @@
     "start": "node cli.js",
     "test": "ava"
   },
-  "files": [
-    "cli.js",
-    "ui.js"
-  ],
   "dependencies": {
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
@@ -24,15 +19,15 @@
     "ink": "^3.0.8",
     "ink-spinner": "^4.0.2",
     "meow": "^7.1.1",
-    "react": "^16.14.0",
-    "regenerator-runtime": "^0.13.9"
+    "react": "^16.14.0"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@babel/register": "^7.14.5",
     "@ethancord/prettier-config": "^1.0.0",
     "ava": "^3.15.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "regenerator-runtime": "^0.13.9"
   },
   "ava": {
     "babel": true,
