--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "glob": "^7.2.0",
     "import-jsx": "^4.0.0",
     "ink": "^3.0.8",
     "ink-spinner": "^4.0.2",
