Fix: Conflicting peer dependencies with React
The `ink` dependency required React 17 but we had a core dependency of
React 16. The conflicting react versions caused issues when running.

This has now been fixed by bumping React to 17 and adding
`check-peer-dependencies` package so that we can catch this in the
future as part of our tests.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node cli.js",
-    "test": "ava"
+    "test": "check-peer-dependencies && ava"
   },
   "bin": "cli.js",
   "dependencies": {
@@ -18,11 +18,12 @@
     "ink": "^3.0.8",
     "ink-spinner": "^4.0.2",
     "meow": "^7.1.1",
-    "react": "^16.14.0"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@ethancord/prettier-config": "^1.0.0",
     "ava": "^3.15.0",
+    "check-peer-dependencies": "^4.1.0",
     "prettier": "2.1.2"
   },
   "prettier": "@ethancord/prettier-config",
