--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "slackmojis-dl",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "description": "Downloads all emojis from https://slackmojis.com",
   "main": "cli.js",
   "author": "Ethan Fann",
   "license": "MIT",
   "scripts": {
     "start": "node cli.js",
-    "test": "check-peer-dependencies && ava"
+    "test": "check-peer-dependencies && ava",
+    "lint": "prettier --check ."
   },
   "bin": "cli.js",
   "dependencies": {
     "axios": "^0.21.1",
-    "bluebird": "^3.7.2",
     "glob": "^7.2.0",
     "import-jsx": "^4.0.0",
     "ink": "^3.0.8",
@@ -24,6 +24,7 @@
     "@ethancord/prettier-config": "^1.0.0",
     "ava": "^3.15.0",
     "check-peer-dependencies": "^4.1.0",
+    "nock": "^13.5.6",
     "prettier": "2.1.2"
   },
   "prettier": "@ethancord/prettier-config",
