--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "slackmojis-dl",
-  "version": "3.0.0",
-  "description": "Downloads all emojis from https://slackmojis.com",
-  "main": "cli.js",
-  "author": "Ethan Fann",
-  "license": "MIT",
-  "scripts": {
-    "start": "node cli.js",
-    "test": "check-peer-dependencies && ava",
-    "lint": "prettier --check ."
-  },
-  "bin": "cli.js",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "glob": "^7.2.0",
-    "import-jsx": "^4.0.0",
-    "ink": "^3.0.8",
-    "ink-spinner": "^4.0.2",
-    "meow": "^7.1.1",
-    "react": "^17.0.2"
-  },
-  "devDependencies": {
-    "@ethancord/prettier-config": "^1.0.0",
-    "ava": "^3.15.0",
-    "check-peer-dependencies": "^4.1.0",
-    "nock": "^13.5.6",
-    "prettier": "2.1.2"
-  },
-  "prettier": "@ethancord/prettier-config",
-  "engines": {
-    "node": ">=16"
-  }
+	"name": "slackmojis-dl",
+	"version": "3.0.0",
+	"description": "Downloads all emojis from https://slackmojis.com",
+	"main": "cli.js",
+	"author": "Ethan Fann",
+	"license": "MIT",
+	"scripts": {
+		"start": "node cli.js",
+		"test": "check-peer-dependencies && ava",
+		"lint": "biome check .",
+		"lint:fix": "biome check --write .",
+		"format": "biome format --write ."
+	},
+	"bin": "cli.js",
+	"dependencies": {
+		"axios": "^0.21.1",
+		"glob": "^7.2.0",
+		"import-jsx": "^4.0.0",
+		"ink": "^3.0.8",
+		"ink-spinner": "^4.0.2",
+		"meow": "^7.1.1",
+		"react": "^17.0.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.6",
+		"ava": "^3.15.0",
+		"check-peer-dependencies": "^4.1.0",
+		"nock": "^13.5.6"
+	},
+	"engines": {
+		"node": ">=16"
+	}
 }
