--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
 	"name": "slackmojis-dl",
 	"version": "3.0.0",
 	"description": "Downloads all emojis from https://slackmojis.com",
-	"main": "cli.js",
+	"main": "src/cli.js",
 	"author": "Ethan Fann",
 	"license": "MIT",
 	"scripts": {
-		"start": "node cli.js",
+		"start": "node src/cli.js",
 		"test": "check-peer-dependencies && ava",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"format": "biome format --write ."
 	},
-	"bin": "cli.js",
+	"bin": "bin/slackmojis-dl",
 	"dependencies": {
 		"axios": "^0.21.1",
 		"glob": "^7.2.0",
