Add last page update workflow and enhance emoji fetching logic
- Introduced a new GitHub Actions workflow for updating the last page snapshot on a schedule.
- Added a script to fetch and save the last page information to `data/lastPage.json`.
- Updated `fetchAllEmojis` to utilize the last page hint for improved fetching logic.
- Enhanced the CLI and UI components to display estimated time of arrival (ETA) for downloads.
- Updated package.json to include new scripts and workflows.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"test": "check-peer-dependencies && ava",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+		"update:last-page": "node scripts/update-last-page.js"
 	},
 	"bin": "bin/slackmojis-dl",
 	"dependencies": {
