Refactor to ES modules and enhance emoji downloading logic
- Converted CommonJS modules to ES modules across the codebase for better compatibility and modern syntax.
- Updated the `package.json` to specify module type.
- Refactored various service files to use `import` statements, improving clarity and consistency.
- Introduced new utility functions for building download targets and managing emoji downloads.
- Enhanced the emoji fetching and downloading logic to improve performance and error handling.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "slackmojis-dl",
 	"version": "3.0.0",
 	"description": "Downloads all emojis from https://slackmojis.com",
+	"type": "module",
 	"main": "src/cli.js",
 	"author": "Ethan Fann",
 	"license": "MIT",
