--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "es2022",
-		"module": "Node16",
-		"moduleResolution": "node16",
-		"allowJs": true,
-		"checkJs": false,
+		"module": "nodenext",
+		"moduleResolution": "nodenext",
 		"jsx": "react-jsx",
 		"outDir": "dist",
 		"rootDir": "src",
