Add run metadata management and enhance emoji pipeline logic

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,15 @@
 		"useIgnoreFile": false
 	},
 	"files": {
-		"ignoreUnknown": false
+		"ignoreUnknown": false,
+		"includes": [
+			"src/**/*",
+			"scripts/**/*",
+			"test/**/*",
+			"package.json",
+			"biome.json",
+			"tsconfig.json"
+		]
 	},
 	"formatter": {
 		"enabled": true,
