Refactor metadata management by removing lastPage script, introducing new metadata update script, and updating workflows for automated syncing and testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,15 +4,16 @@
 name: test
 
 on:
-  push:
-    branches: [main]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: '0 5 * * *'
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,6 +27,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
       - run: npm ci
       - run: npm test
